<resources>
    <string name="app_name">wang34-MyCarFootprint</string>
    <string name="gas_station_name">Gas Station Name:</string>
    <string name="date">Date:</string>
    <string name="fuel_type">Fuel Type:</string>
    <string name="amount_in_litre">Amount In Litre:</string>
    <string name="apply_change">Apply Change</string>
    <string name="price_per_litre">Price Per Litre:</string>
    <string name="add">Add</string>
    <string name="total_price">Total Price:</string>
    <string name="total_footprint">Total footprint:</string>
    <string-array name="fuel_types">
        <item>Gasoline</item>
        <item>Diesel</item>
    </string-array>
</resources>