<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/editable_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="0dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/base"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/label_gas_station_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/uni_sans_thin"
                android:gravity="end"
                android:text="@string/gas_station_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/label_date"
                app:layout_constraintEnd_toStartOf="@+id/textView_gas_station_name"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_gas_station_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/uni_sans_heavy"
                android:textColor="@color/primary"
                app:layout_constraintBaseline_toBaselineOf="@id/label_gas_station_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/label_gas_station_name" />

            <TextView
                android:id="@+id/label_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/date"
                android:textSize="14sp"
                android:fontFamily="@font/uni_sans_thin"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/label_fuel_type"
                app:layout_constraintEnd_toStartOf="@+id/textView_date"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_gas_station_name" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/uni_sans_heavy"
                android:textColor="@color/primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/label_date" />

            <TextView
                android:id="@+id/label_fuel_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/fuel_type"
                android:textSize="14sp"
                android:fontFamily="@font/uni_sans_thin"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/label_litre_amount"
                app:layout_constraintEnd_toStartOf="@+id/textView_fuel_type"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_date" />

            <TextView
                android:id="@+id/textView_fuel_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/uni_sans_heavy"
                android:textColor="@color/primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_fuel_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/label_fuel_type" />

            <TextView
                android:id="@+id/label_litre_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/amount_in_litre"
                android:textSize="14sp"
                android:fontFamily="@font/uni_sans_thin"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/label_price_per_litre"
                app:layout_constraintEnd_toStartOf="@+id/textView_litre_amount"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_fuel_type" />

            <TextView
                android:id="@+id/textView_litre_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/uni_sans_heavy"
                android:textColor="@color/primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_litre_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/label_litre_amount" />

            <TextView
                android:id="@+id/label_price_per_litre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/price_per_litre"
                android:textSize="14sp"
                android:fontFamily="@font/uni_sans_thin"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toStartOf="@+id/textView_price_per_litre"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_litre_amount" />

            <TextView
                android:id="@+id/textView_price_per_litre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/uni_sans_heavy"
                android:textColor="@color/primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_price_per_litre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/label_price_per_litre" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/label_price_per_litre"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toTopOf="@id/label_total_price"/>

            <TextView
                android:id="@+id/label_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/total_price"
                android:textSize="14sp"
                android:fontFamily="@font/uni_sans_thin"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/label_total_footprint"
                app:layout_constraintEnd_toStartOf="@+id/textView_total_price"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/textView_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/uni_sans_heavy"
                android:textColor="@color/primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_total_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/label_total_price" />

            <TextView
                android:id="@+id/label_total_footprint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/total_footprint"
                android:textSize="14sp"
                android:fontFamily="@font/uni_sans_thin"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView_total_footprint"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_total_price" />

            <TextView
                android:id="@+id/textView_total_footprint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/uni_sans_heavy"
                android:textColor="@color/primary"
                app:layout_constraintBaseline_toBaselineOf="@+id/label_total_footprint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/label_total_footprint" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editable_card">

        <Button
            android:id="@+id/button_edit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:drawableTop="@android:drawable/ic_menu_edit"
            android:paddingTop="10dp"
            android:textSize="12sp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toStartOf="@+id/button_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_button"
            android:drawableTop="@android:drawable/ic_menu_delete"
            android:paddingTop="10dp"
            android:textSize="12sp"
            android:stateListAnimator="@null"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_edit"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>